--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -43,7 +43,7 @@
             android:layout_marginBottom="10dp"
             android:gravity="center"
             android:padding="15dp"
-            android:text="TEXTRON SMARTBOX"
+            android:text="TEXTRON VenusCapture Fly"
             android:textSize="40dp"
             android:textStyle="bold" />
 
@@ -73,7 +73,6 @@
                 android:layout_marginTop="0dp"
                 android:focusable="true"
                 android:hint="@string/prompt_password"
-                android:imeActionId="@+id/login"
                 android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
