--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
         android:orientation="horizontal"
         android:padding="5dp">
 
+        <!--
         <Button
             android:id="@+id/unlock_button_id"
             android:layout_width="fill_parent"
@@ -48,14 +49,15 @@
             android:background="@color/colorPrimary"
             android:text="Unlock SmartBox"
             android:textColor="#fff"/>
+            -->
 
         <Button
             android:id="@+id/lock_button_id"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/colorPrimaryDark"
-            android:text="Lock SmartBox"
+            android:background="@color/colorPrimary"
+            android:text="Unlock Venus Capture"
             android:textColor="#fff"/>
     </LinearLayout>
 
