--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#2a9a8c</color>
+    <color name="colorPrimaryDark">#1A776C</color>
+    <color name="colorAccent">#F1C40F</color>
+    <color name="random1">#178E55</color>
+    <color name="random2">#126C41</color>
+    <color name="white">#FFFFFF</color>
 </resources>
